# jp-webapp

./: .dockerignore  .gitignore  .gitmodules  README.md  docker-compose-db.yaml  docker-compose.yaml  dockerfile  env.py  environment.yml  flake.nix  git_contributors_report.txt  main.py  manage.py  mkdocs.yml  package.json  pyproject.toml  rename.py  reports.sh  requirements.txt  schema.sql  urls.py  views.py
.github/workflows/: ci.yml  prod.yml  stage.yml
config_ui/: asgi.py  settings.py  urls.py  wsgi.py
notebooks/: db.qmd  db.quarto_ipynb  import_export.qmd  naics.qmd  proces.qmd  rename.qmd  requests.qmd  test.qmd  test.quarto_ipynb
src/: App.css  App.tsx  altair_map.tsx  colaboradores.tsx  cuestionarios.tsx  home.tsx  index.css  main.tsx  proyectos.tsx
src/css/: indice.css  (+1 more)
staticfiles/: ciclos_economicos.css  colaboradores.css  demografico.css  forms.css  home.12bc53483b93 2.css  imports_and_exports 2.css  imports_and_exports.css  indicadores.css  jquery-2.1.0.min.js  jquery-ui_1.10.2.js  macro 2.css  macro.css  product_hts.css
templates/: 1 CiclosEcon.html  2-home.html  3 Indicadores.html  4 Macro.html  404 2.html  404.html  OfficialHome.html  Series-Historicas-Seleccionadas-2001-2023p.csv  Series-historicas-1950-al-2011p.csv  ciclos_economicos.html  colaboradores.html  cuestionario_salida.html  cuestionario_viajero.html  cuestionario_viajero_english.html  cuestionario_viajero_spanish.html  demograficos.html  forms.html  graficasmacro.py  home.html  home2.html  imports_exports.html  income_employment.html  indicadores.html  indice_desarrollo_humano.html  macro.html  product_hts.html  productos_ranking.html  proyecciones.html  proyectos.html  salario_y_empleo.html  salud_ingresos_educacion.html  signin.html  styles.css
web_app/: Forecast_Table.py  apps.py  csvSeries-Historicas-Seleccionadas-2001-2023p.csv  demographic_graph.py  fiscal_demographic_graph.py  forms.py  graphics_function.py  health_income_graph.py  idb.py  models.py  monthly_demographic_graph.py  trimestral_demographic_graph.py  urls.py  views.py
(+562 files in other folders)
