[project]
authors = [{ name = "Alejandro Ousland", email = "alejandro.ouslan@upr.edu" }]
maintainers = [
  { name = "Yamilette Alemany", email = "yamilette.alemany@upr.edu" },
  { name = "Adriana I. Carrasquillo Cruz", email = "adriana.carrasquillo1@upr.edu" 
    name = Fernando J. Sierra Aponte, email = "fernando.sierra3@upr.edu"},
]
license = { text = "GPL-3.0-or-later" }
name = "jp-webapp"
version = "0.4.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "django>=5.1.3",
  "numpy>=2.1.3",
  "pandas>=2.2.3",
  "polars>=1.16.0",
  "psycopg2-binary>=2.9.10",
  "pyarrow>=18.1.0",
  "pytest>=8.3.4",
  "python-dotenv>=1.0.1",
  "requests>=2.32.3",
  "scipy>=1.14.1",
  "sqlalchemy>=2.0.36",
  "sqlmodel>=0.0.22",
  "tk>=0.1.0",
  "tqdm>=4.67.1",
  "whitenoise>=6.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
